# rust-csharp-doc-generator

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  template.md
output_dir/: documentation.md
src/: cli.rs  documentation.rs  main.rs  parser.rs
templates/: template.md
test_data/: ClassExample.cs  EnumExample.cs  InterfaceExample.cs  MixedExample1.cs  NestedExample.cs  StructExample.cs  example1.cs
