[package]
name = "documentation_generator"
version = "0.1.0"
authors = ["Borna Cvitanić borna.cvitanic@gmail.com"]
description = "Rust-based documentation generator for C# codebases. It scans C# source files, extracts relevant constructs (classes, structs, enums, and interfaces), and generates documentation based on a provided template."
repository = "https://github.com/bornacvitanic/rust-csharp-doc-generator"
license-file = "LICENSE.md"
edition = "2021"
keywords = ["documentation", "generator", "CSharp", "templates", "parsing"]
categories = ["command-line-utilities", "development-tools", "parsing"]


[dependencies]
# Dependencies for parsing C# files and handling templates
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
strum = "0.26.3"
strum_macros = "0.26.4"
#To set up a basic command-line interface (CLI)
structopt = "0.3"
structopt-derive = "0.4"